{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 441,
  "lineage": "7b168c1b-df92-c71e-a744-6c8a405f53dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes_controllers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b5a865c3579bbc4",
            "arn": "arn:aws:ec2:eu-west-3:253268106408:instance/i-07dc69caabd38e3e0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07dc69caabd38e3e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-m2i-local",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-073f0be39e4b96997",
            "private_dns": "ip-10-0-1-10.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-35-180-31-241.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.31.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0101fe4417c0ef980",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a3687663b555ea7",
            "tags": {
              "Name": "controller-0"
            },
            "tags_all": {
              "Name": "controller-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d16454fbffe0cf8"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubernetes_key",
            "aws_security_group.kubernetes_security_group",
            "aws_subnet.kubernetes_subnet",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b5a865c3579bbc4",
            "arn": "arn:aws:ec2:eu-west-3:253268106408:instance/i-0a4fa2f02b144cce5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4fa2f02b144cce5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-m2i-local",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a4694fbf4b374afb",
            "private_dns": "ip-10-0-1-20.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-13-39-150-163.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.150.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030e7053dca1344aa",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a3687663b555ea7",
            "tags": {
              "Name": "worker-0"
            },
            "tags_all": {
              "Name": "worker-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d16454fbffe0cf8"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubernetes_key",
            "aws_security_group.kubernetes_security_group",
            "aws_subnet.kubernetes_subnet",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubernetes_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:253268106408:internet-gateway/igw-07bd002305be49955",
            "id": "igw-07bd002305be49955",
            "owner_id": "253268106408",
            "tags": {
              "Name": "kubernetes"
            },
            "tags_all": {
              "Name": "kubernetes"
            },
            "vpc_id": "vpc-0644366f2e27654e5"
          },
          "dependencies": [
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:253268106408:route-table/rtb-00935e9ee44816d5e",
            "id": "rtb-00935e9ee44816d5e",
            "owner_id": "253268106408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bd002305be49955",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes"
            },
            "tags_all": {
              "Name": "kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0644366f2e27654e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kubernetes_igw",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0221e41b6d8549d42",
            "route_table_id": "rtb-00935e9ee44816d5e",
            "subnet_id": "subnet-09a3687663b555ea7"
          },
          "dependencies": [
            "aws_internet_gateway.kubernetes_igw",
            "aws_route_table.kubernetes_route_table",
            "aws_subnet.kubernetes_subnet",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:253268106408:security-group/sg-06d16454fbffe0cf8",
            "description": "Kubernetes security group",
            "egress": [],
            "id": "sg-06d16454fbffe0cf8",
            "ingress": [],
            "name": "kubernetes",
            "name_prefix": "",
            "owner_id": "253268106408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0644366f2e27654e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kubernetes_rule_five",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1590171162",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d16454fbffe0cf8",
            "security_group_rule_id": "sgr-05403be56050e821b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubernetes_security_group",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kubernetes_rule_for",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-841763883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d16454fbffe0cf8",
            "security_group_rule_id": "sgr-0be44685273526078",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubernetes_security_group",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kubernetes_rule_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1351087239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06d16454fbffe0cf8",
            "security_group_rule_id": "sgr-0235276f8977a0076",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubernetes_security_group",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kubernetes_rule_six",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-585431768",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-06d16454fbffe0cf8",
            "security_group_rule_id": "sgr-0ae05d29edec2908a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubernetes_security_group",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kubernetes_rule_three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3206570028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d16454fbffe0cf8",
            "security_group_rule_id": "sgr-03f260925e600b5fd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubernetes_security_group",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kubernetes_rule_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16",
              "10.200.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-2660732585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06d16454fbffe0cf8",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubernetes_security_group",
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:253268106408:subnet/subnet-09a3687663b555ea7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a3687663b555ea7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253268106408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes"
            },
            "tags_all": {
              "Name": "kubernetes"
            },
            "vpc_id": "vpc-0644366f2e27654e5"
          },
          "dependencies": [
            "aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:253268106408:vpc/vpc-0644366f2e27654e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe561a07b5b502ec",
            "default_route_table_id": "rtb-079864c0c4ba62ea5",
            "default_security_group_id": "sg-05396da40400dba80",
            "dhcp_options_id": "dopt-01668144b8ae99e26",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0644366f2e27654e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079864c0c4ba62ea5",
            "owner_id": "253268106408",
            "tags": {
              "Name": "kubernetes"
            },
            "tags_all": {
              "Name": "kubernetes"
            }
          }
        }
      ]
    }
  ]
}